# SimpleIOUSB

./: CMakeLists.txt  LICENSE.txt  README.md
Examples/: Common.h  Connect.c  ConnectAsync.c  Inspect.c
Source/: SimpleIOUSB.c  SimpleIOUSB.h
